--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -82,3 +82,45 @@ h6, h2, h3, p, h5 {
 .cont {
     margin-top: 30px;
 }
+
+
+.pagination {
+    text-align: center;
+}
+
+.pagination a, .pagination .page-disabled {
+    display: inline-block;
+    border: solid 1px #6a7ddd;
+    border-radius: 3px;
+    padding: 5px;
+    margin: 3px;
+}
+
+.pagination a {
+    background: #3875d7;
+    color: white;
+    text-decoration: none;
+}
+
+.pagination a:hover {
+    background: #3875d7;
+    text-decoration: underline;
+}
+
+.pagination .page-disabled {
+    background: #3875d7;
+    color: #f8f8f8;
+}
+
+.pagination .current-page {
+    display: inline-block;
+}
+
+.pagination .current-page input {
+    width: 50px;
+    padding: 5px 7px;
+    font-size: inherit;
+    border-radius: 5px;
+    text-align: center;
+    border: solid 1px gray;
+}
