--- a/core/instagram/templates/partial/post_list.html
+++ b/core/instagram/templates/partial/post_list.html
@@ -5,6 +5,7 @@
     <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
             <div class="card">
+                <img src="{{ post.image.url }}" alt="...">
                 <div class="card-body">
                     <h5 style="color: black">Автор: {{ post.author }}</h5><br>
                     Описание:
