--- a/core/accounts/templates/profile_user.html
+++ b/core/accounts/templates/profile_user.html
@@ -30,8 +30,8 @@
                     <a href="{% url 'sub' user_obj.pk %}" class="btn btn-light">Отписаться</a>
                 {% endif %}
             </div>
-        {% endif %}<br>
-        <h2 class="text-center clear">Публикации:</h2><br>
+        {% endif %}<br><br>
+        <h2 class="text-center clear">Мои публикации:</h2><br><br>
         {% include 'partial/post_list.html' %}
     </div>
 {% endblock %}
