--- a/core/instagram/templates/posts/detail_post.html
+++ b/core/instagram/templates/posts/detail_post.html
@@ -28,6 +28,19 @@
                 <p class="card-text" style="color: #1b1b1b">{{ post.description }}</p>
                 <p class="card-text" style="color: #1b1b1b">Время создания: {{ post.created }}</p>
                 <p class="card-text" style="color: #1b1b1b">Время редактирования: {{ post.updated }}</p>
+                <div class="btn-group" role="group">
+                    {% if post.author == request.user %}
+                        <a href="{% url 'update_post' post.pk %}">
+                            <button class="btn btn-success">Редактировать</button>
+                        </a>
+                        <form action="{% url 'delete_post' post.pk %}" method="post">
+                            {% csrf_token %}
+                            <a href="{% url 'delete_post' post.pk %}" style="margin-left: 10px">
+                                <button class="btn btn-danger">Удалить</button>
+                            </a>
+                        </form>
+                    {% endif %}
+                </div>
             </div>
         </div>
         <h4 style="color: white">Комметнарии:</h4>
@@ -37,7 +50,8 @@
                 <div class="col">
                     <div class="card">
                         <div class="card-body">
-                            <a class="nav-link" href="{% url 'profile' comment.author.pk %}">Имя: {{ comment.author.username }}</a>
+                            <a class="nav-link"
+                               href="{% url 'profile' comment.author.pk %}">Имя: {{ comment.author.username }}</a>
                             <p class="card-text" style="color: black">Комметнарий: {{ comment.text }}</p>
                             {% if comment.author == request.user %}
                                 <div class="btn-group" role="group">
@@ -56,7 +70,7 @@
                     </div>
                 </div>
             </div><br>
-            {% empty %}
+        {% empty %}
             <h5>Нет комментариев</h5>
         {% endfor %}
         <br>
