--- a/core/accounts/templates/login.html
+++ b/core/accounts/templates/login.html
@@ -9,6 +9,9 @@
                     {% bootstrap_form form %}
                     <div class="form_row">
                         {% bootstrap_button button_type="submit" content='Войти' %}
+                        <a href="{% url 'register' %}">
+                            <button type="button" class="btn btn-primary">Зарегестрироваться</button>
+                        </a>
                     </div>
                 </form>
             </div>
